fix: image path

--- a/source/_posts/imu101.md
+++ b/source/_posts/imu101.md
@@ -24,7 +24,7 @@ mathjax: true
 
 加速度計會產生高頻振蕩的噪音訊號，又陀螺儀是將角速度對時間積分產生角度，故**易產生誤差**。
 
-![](./x1Xlfsk.png)
+![](x1Xlfsk.png)
 
 <font style="font-size:
 10px;">source: https://stackoverflow.com/questions/1586658/combine-gyroscope-and-accelerometer-data</font>
@@ -40,7 +40,7 @@ mathjax: true
 
 加速度計要濾掉高頻訊號，陀螺儀要濾掉低頻訊號
 
-![](./94sdzbz.png)
+![](94sdzbz.png)
 <font style="font-size: 10px;">https://stackoverflow.com/questions/1586658/combine-gyroscope-and-accelerometer-data</font>
 
 $$
@@ -124,7 +124,7 @@ $$
     1 & 0
     \end{bmatrix}$
 
-![](./7OP0UBt.png)
+![](7OP0UBt.png)
 
 ## 實作
 
@@ -136,13 +136,13 @@ $$
 
 ### 測試結果 Part 1
 
-![](./o9QcK44.gif)
+![](o9QcK44.gif)
 
 ### 測試結果 Part 2
 
 | Pitch | Row |
 | -------- | -------- |
-| ![](./kqVK3qr.png) | ![](./jM9T7T6.png) |
+| ![](kqVK3qr.png) | ![](jM9T7T6.png) |
 
 ## Reference
 <font style="font-size: 13px;">
