chore: change theme to dashed by sunnybyeon

--- a/source/_posts/imu101.md
+++ b/source/_posts/imu101.md
@@ -2,7 +2,7 @@
 title: IMU 101
 date: 2022-12-10 18:12:06
 tags: ['STM32', 'Python', 'C']
-categories: ['實作']
+categories: ['Project']
 description: 線性代數期末報告：使用不同濾波器處理IMU原始數據
 mathjax: true
 ---
@@ -47,10 +47,9 @@ $$
 \text{angle'} = \alpha(\text{angle} + \text{gyro} \times dt) + (1-\alpha)\times(X_a)
 $$
 
-* $\text{angle'}$為得到實際角度，$\text{angle}$為前一時刻角度
-* $\text{gyro}$為陀螺儀值(角速度)，$dt$為計算週期
-* $X_A$為加速度數據換算後的角度值
-* $\alpha = 0.98$
+* \\(\text{gyro}\\) 為陀螺儀值(角速度)， \\(dt\\) 為計算週期
+* \\(X_A\\) 為加速度數據換算後的角度值
+* \\(\alpha = 0.98\\)
 
 ## 卡爾曼濾波
 ### Kalman filter
@@ -66,12 +65,12 @@ $$
   w_k \sim N(0,\ Q_k)
 }
 $$
-- $x_k$ : $k$ 時刻狀態 
-- $F$ : 狀態變換矩陣
-- $u_k$ : 控制向量
-- $B$ : 控制輸入模型
-- $w_k$ : 過程雜訊
-- $Q_k$ : $w_k$ 的共變異數矩陣
+- \\(x_k\\) : \\(k\\) 時刻狀態 
+- \\(F\\) : 狀態變換矩陣
+- \\(u_k\\) : 控制向量
+- \\(B\\) : 控制輸入模型
+- \\(w_k\\) : 過程雜訊
+- \\(Q_k\\) : \\(w_k\\) 的共變異數矩陣
 
 ### 基本模型-觀測
 $$
@@ -80,10 +79,10 @@ $$
   v_k \sim N(0, R_k)
 }
 $$
-- $z_k$ : $k$ 時刻測量到的狀態
-- $H$ : 觀測模型
-- $v_k$ : 觀測誤差
-- $R_k$ : $v_k$ 的共變異數矩陣
+- \\(z_k\\) : \\(k\\) 時刻測量到的狀態
+- \\(H\\) : 觀測模型
+- \\(v_k\\) : 觀測誤差
+- \\(R_k\\) : \\(v_k\\) 的共變異數矩陣
 
 ### 預測
 $$
@@ -91,7 +90,7 @@ $$
   \hat{x}_ k^{-} = F\hat{x}_{k-1}+B\dot{\theta}_k \\\\
 }
 $$
-- $F=
+- \\(F=
     \begin{bmatrix}
     1 & -\Delta t \\\\
     0 & 1
@@ -105,10 +104,10 @@ $$
     \begin{bmatrix}
     \Delta t \\\\
     0
-    \end{bmatrix}$
-- $P_k$ : $x_k$ 的誤差共變異數矩陣
-    - $P_k = E[(x_k - E[x_k])(x_k - E[x_k])^T]$
-    - $cov(AX+B,\ AX+B) = var(AX+B)\\ = A\ var(X)\ A^T$
+    \end{bmatrix}\\)
+- \\(P_k\\) : \\(x_k\\) 的誤差共變異數矩陣
+    - \\(P_k = E[(x_k - E[x_k])(x_k - E[x_k])^T]\\)
+    - \\(cov(AX+B,\ AX+B) = var(AX+B)\\ = A\ var(X)\ A^T\\)
 
 ### 修正
 $$
@@ -118,11 +117,11 @@ $$
   P_k = (I-K_kH)P^-_k
 }
 $$
-- $K_k$ : 卡爾曼增益 (最小化$P_k$)
-- $H =
+- \\(K_k\\) : 卡爾曼增益 (最小化\\(P_k\\))
+- \\(H =
     \begin{bmatrix}
     1 & 0
-    \end{bmatrix}$
+    \end{bmatrix}\\)
 
 ![](7OP0UBt.png)
 
